--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.bg-MintCream {
+  background: #F4FAFD;
+}
+
+.object-fit {
+  object-fit: cover;
+}
+
 .carousel-bg {
   background: rgba(29, 29, 29, 0.7);
 }
+
+/* General CSS End */
