--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@
 }
 
 /* General CSS End */
+/* Media Query for Height */
+@media only screen and (max-width: 575.98px) {
+  .carousel-item>img {
+    height: 265px;
+  }
+}
