--- a/style.css
+++ b/style.css
@@ -1,23 +1,9 @@
-* {
-  font-family: 'Poppins', sans-serif;
-}
-
-.bg-MintCream {
-  background: #F4FAFD;
-}
-
-.object-fit {
-  object-fit: cover;
-}
-
-.carousel-bg {
-  background: rgba(29, 29, 29, 0.7);
-}
-
+* {font-family: 'Poppins', sans-serif;}
+.bg-MintCream {background: #F4FAFD;}
+.object-fit {object-fit: cover;}
+.carousel-bg {background: rgba(29, 29, 29, 0.7);}
 /* General CSS End */
 /* Media Query for Height */
 @media only screen and (max-width: 575.98px) {
-  .carousel-item>img {
-    height: 265px;
-  }
+  .carousel-item>img {height: 265px;}
 }
