--- a/style.css
+++ b/style.css
@@ -5,5 +5,7 @@
 /* General CSS End */
 /* Media Query for Height */
 @media only screen and (max-width: 575.98px) {
-  .carousel-item>img {height: 265px;}
+  .carousel-item>img {
+    height: 265px;
+  }
 }
